fixed footer centralization

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <hr class="hr">
     <footer>
-        <div>
+        <div class="footer_links">
             <ul>
                 <li><a href="www.conditionsofuse.com"></a>Conditions of use</li>
                 <li><a href="www.privacypolicy.com"></a>Privacy Policy</li>
